# technical-fun-screen

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: cli.py  main.py
src/thoughtful_ai/: __main__.py  dispatch.py  main.py  package.py  threshold.py
src/utils/: pretty_output.py
tests/thoughtful_ai/: models.py  test_app.py
tests/thoughtful_ai/data/: package_sort_test_cases.json
